--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -72,7 +72,7 @@
     "    root_dir: Path\n",
     "    source_URL: str\n",
     "    local_data_file: Path\n",
-    "    unzip_data: Path"
+    "    unzip_dir: Path"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "                url = self.config.source_URL,\n",
     "                filename = self.config.local_data_file\n",
     "            )\n",
-    "            logger.info(f\" {filename} download with the following info: \\n{headers}\")\n",
+    "            logger.info(f\" {filename} download! with the following info: \\n{headers}\")\n",
     "        else:\n",
     "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
     "\n",
@@ -159,15 +159,53 @@
     "        \"\"\"\n",
     "        unzip_path = self.config.unzip_dir\n",
     "        os.makedirs(unzip_path, exist_ok=True)\n",
-    "        with zipfile.Zipfile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
     "            zip_ref.extractall(unzip_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-01-24 18:48:07,360: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-01-24 18:48:07,361: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-01-24 18:48:07,362: INFO: common: created directory at: artifacts]\n",
+      "[2024-01-24 18:48:07,367: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-01-24 18:48:10,669: INFO: 2301650644:  artifacts/data_ingestion/data.zip download! with the following info: \n",
+      "Connection: close\n",
+      "Content-Length: 7903594\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: A4A8:08E9:59B146:6C3C30:65B1A1B8\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Wed, 24 Jan 2024 23:48:08 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-ewr18153-EWR\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1706140088.324254,VS0,VE165\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 1454eea1abf8c1df9c893b99b9c6d3f34ae21526\n",
+      "Expires: Wed, 24 Jan 2024 23:53:08 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -178,6 +216,13 @@
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
