--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,98 @@
     "    STATUS_FILE: str\n",
     "    ALL_REQUIRED_FILES: list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textSummarizer.constants import *\n",
+    "from textSummarizer.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            config_filepath = CONFIG_FILE_PATH,\n",
+    "            params_filepath = PARAMS_FILE_PATH):\n",
+    "        \n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def get_data_validation_config(self) -> DataValidationConfig:\n",
+    "        config = self.config.data_validation\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_validation_config = DataValidationConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            STATUS_FILE=config.STATUS_FILE,\n",
+    "            ALL_REQUIRED_FILES=config.ALL_REQUIRED_FILES\n",
+    "        )\n",
+    "\n",
+    "        return data_validation_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from textSummarizer.logging import logger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataValidation:\n",
+    "    def __init__(self, config: DataValidationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def validate_all_files_exits(self)-> bool:\n",
+    "        try:\n",
+    "            validation_status = None\n",
+    "\n",
+    "            all_files = os.listdir(os.path.join(\"artifacts\",\"data_ingestion\",\"samsun_dataset\"))\n",
+    "\n",
+    "            for file in all_files:\n",
+    "                if file not in self.config.ALL_REQUIRED_FILES:\n",
+    "                    validation_status = False\n",
+    "                    with open(self.config.STATUS_FILE, \"w\") as f:\n",
+    "                        f.write(f\"validation_status: {validation_status}\")\n",
+    "                else:\n",
+    "                    validation_status = True\n",
+    "                    with open(self.config.STATUS_FILE, \"w\") as f:\n",
+    "                        f.write(f\"validation_status: {validation_status}\")\n",
+    "\n",
+    "            return validation_status\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
