--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -165,18 +165,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-01-30 15:02:34,506: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-01-30 15:02:34,508: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-01-30 15:02:34,509: INFO: common: created directory at: artifacts]\n",
-      "[2024-01-30 15:02:34,510: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-01-30 15:02:34,511: INFO: 2301650644: File already exists of size: ~ 7718 KB]\n"
+      "[2024-01-30 17:22:51,399: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-01-30 17:22:51,401: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-01-30 17:22:51,403: INFO: common: created directory at: artifacts]\n",
+      "[2024-01-30 17:22:51,405: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-01-30 17:22:52,610: INFO: 2301650644:  artifacts/data_ingestion/data.zip download! with the following info: \n",
+      "Connection: close\n",
+      "Content-Length: 7903594\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 2FA4:2655:F1352:121576:65B972CB\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Tue, 30 Jan 2024 22:22:52 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-ewr18145-EWR\n",
+      "X-Cache: HIT\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1706653372.169074,VS0,VE81\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 5fa04ac54fbb4948a41bdfd7121c0ed3c87c1f48\n",
+      "Expires: Tue, 30 Jan 2024 22:27:52 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
      ]
     }
    ],
