--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-01-31 17:40:43,731: INFO: config: PyTorch version 2.1.2 available.]\n"
+      "[2024-01-31 17:42:49,838: INFO: config: PyTorch version 2.1.2 available.]\n"
      ]
     }
    ],
@@ -205,7 +205,7 @@
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
-    "                  train_dataset=dataset_samsum_pt[\"train\"], \n",
+    "                  train_dataset=dataset_samsum_pt[\"train\"], #change from #test to #train for training purposes\n",
     "                  eval_dataset=dataset_samsum_pt[\"validation\"])\n",
     "        \n",
     "        trainer.train()\n",
@@ -225,10 +225,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-01-31 17:40:44,254: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-01-31 17:40:44,259: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-01-31 17:40:44,262: INFO: common: created directory at: artifacts]\n",
-      "[2024-01-31 17:40:44,264: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2024-01-31 17:42:50,255: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-01-31 17:42:50,257: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-01-31 17:42:50,258: INFO: common: created directory at: artifacts]\n",
+      "[2024-01-31 17:42:50,260: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     },
     {
@@ -239,7 +239,7 @@
       "  return self.fget.__get__(instance, owner)()\n",
       "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "  0%|          | 0/920 [00:00<?, ?it/s]"
+      "  0%|          | 1/920 [01:00<15:30:02, 60.72s/it]"
      ]
     },
     {
